# PAP2015

./: README.md
PAP/: 0603.txt  CMakeLists.txt  package.xml
PAP/database/: database.txt
PAP/dispensing/Powermeter_V3_0/: Powermeter_V3.0.Apr  Powermeter_V3.0.Info  Powermeter_V3.0.PasteBot  Powermeter_V3.0.PasteTop  Powermeter_V3.0.Whl
PAP/dispensing/Powermeter_V4_3/: Powermeter_V4.3.Apr  Powermeter_V4.3.Info  Powermeter_V4.3.PasteTop  Powermeter_V4.3.Whl
PAP/parameters/: offsets.yaml  ratios.yaml
PAP/pastebots/XGerber/: Powermeter_V4.3.Info  Powermeter_V4.3.PasteBot
PAP/pickPlace/: example.txt  example2.txt
PAP/pickPlace/Powermeter_V3_0/: Powermeter_V3.0_all.TXT  Powermeter_V3.0_bottom.TXT  Powermeter_V3.0_top.TXT
PAP/pickPlace/Powermeter_V4_3/: Powermeter_V4_3_all.TXT  Powermeter_V4_3_bottom.TXT  Powermeter_V4_3_bottom_small.TXT  Powermeter_V4_3_small.TXT  Powermeter_V4_3_top.TXT  Powermeter_V4_3_top_small.TXT
PAP/stitching/: stitch_coord.csv
PAP/stitching/with_light/: stitch_coord.csv
arduino_code/LEDController/: LEDController.ino
arduino_code/arduinoController/: arduinoController.ino
arduino_code/valveAndMotorController/: valveAndMotorController.ino
image_simulator/: CMakeLists.txt  package.xml
image_simulator/src/: image_simulator_node.cpp
motor_controller/: CMakeLists.txt  package.xml
motor_controller/include/motorController/: controllerClass.hpp  controllerNode.h  controller_interface.h  sendfunctions.h
motor_controller/src/: controllerClass.cpp  controllerNode.cpp  controller_interface.cpp  sendfunctions.cpp
opencv_stitch/: main.cpp  opencv_stitch.pro  pcbstitcher.cpp  pcbstitcher.h
pad_finder_learner/: CMakeLists.txt  main.cpp
pap_common/: CMakeLists.txt  package.xml
pap_common/action/: MotorControllerAction.action  Vision.action
pap_common/camera_calib/: bottom_camera.yaml  bottom_camera2.yaml  top_camera.yaml
pap_common/include/pap_common/: CommonDataClasses.hpp  arduino_message_def.h  arduinosendfunctions.h  dispenseStatus_message_def.h  placer_message_def.h  status_message_def.h  task_message_def.h  vision_message_def.h
pap_common/launch/: calibBottomCamera.launch  calibCamera1.launch  calibCamera2.launch  calibTopCamera.launch  startCamera.launch  startCamera1.launch  startCamera2.launch  startall.launch  startall_simulation.launch
pap_common/msg/: ArduinoMsg.msg  CalibrationSignal.msg  DispenseTask.msg  DispenseTasks.msg  PlacerStatus.msg  Status.msg  Task.msg  VisionStatus.msg
pap_common/src/: arduinosendfunctions.cpp
pap_gui/: CMakeLists.txt  package.xml
pap_gui/include/pap_gui/: ClickGraphicsView.hpp  CommonDataClasses.hpp  DatabaseClass.hpp  DispenserPlanner.hpp  GerberPadParser.hpp  MyContextMenuTable.hpp  PadView.hpp  PlacementPlanner.hpp  SlotGraphicsView.hpp  main_window.hpp  packageDialog.hpp  qnode.hpp  slotselectordialog.h  stitchWaypointMaker.h  tapecalibration.h  versionSelectorDialog.h
pap_gui/src/: ClickGraphicsView.cpp  DatabaseClass.cpp  DispenserPlanner.cpp  GerberPadParser.cpp  MyContextMenuTable.cpp  PadView.cpp  PlacementPlanner.cpp  SlotGraphicsView.cpp  database.txt  main.cpp  main_window.cpp  packageDialog.cpp  qnode.cpp  slotselectordialog.cpp  stitchWaypointMaker.cpp  tapecalibration.cpp  versionSelectorDialog.cpp
pap_gui/ui/: main_window.ui  packageDialog.ui  slotselectordialog.ui  tapecalibration.ui  versionSelectorDialog.ui
pap_placer/: CMakeLists.txt  package.xml
pap_placer/include/pap_placer/: offsetTable.hpp  placerClass.hpp  placerNode.hpp
pap_placer/src/: placerClass.cpp  placerNode.cpp
pap_robot/: CMakeLists.txt  manifest.xml  package.xml  urdf.rviz
pap_robot/launch/: display.launch  gazebo.launch
pap_robot/meshes/: nozzle_1.STL  nozzle_2.STL  x-axis.STL  y-axis.STL  z-axis.STL
pap_robot/robots/: pap_robot.URDF
pcb_cv/: CMakeLists.txt  package.xml
pcb_cv/include/pcb_cv/: displayImage.h  padFinder.h  pcbstitcher.h  sendfunctions.h
pcb_cv/src/: displayImage.cpp  padFinder.cpp  pcbstitcher.cpp  sendfunctions.cpp
robot_simulation/: CMakeLists.txt  package.xml
robot_simulation/include/robot_simulation/: controller_simulator.h
robot_simulation/src/: controller_simulator.cpp  simulation.cpp
