<?xml version="1.0"?>
<package format="2">
  <name>pap_gui</name>
  <version>0.1.0</version>
  <description>

     pap_gui

  </description>
  <maintainer email="johan@gmail.com">johan</maintainer>
  <author>johan</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <depend>qt_build</depend>
  <depend>roscpp</depend>
  <depend>libqt4-dev</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>pap_common</depend>
  <depend>pap_placer</depend>
 
</package>
